# rust-lambda-html-backend-template

./: .gitignore  Cargo.toml  README.md  flake.nix  samconfig.toml  template.yaml
functions/: Cargo.toml
functions/src/good_morning/: good_morning.rs
functions/src/hello_world/: hello_world.rs
src/: helloworld.rs  main.rs
src/good_morning/: good_morning.rs
src/hello_world/: hello_world.rs
templates/: helloworld.html
