[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello_world_lambda"
path = "src/hello_world/hello_world.rs"

[[bin]]
name = "good_morning_lambda"
path = "src/good_morning/good_morning.rs"

[dependencies]
askama = "0.12.1"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

